--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,9 +61,9 @@ workflows:
   install_and_test:
     jobs:
       - install
-      - build
+      - build:
         requires:
           - install
-      - test
+      - test:
         requires:
           - install
