--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,13 @@
 version: 2
+
+defaults: &defaults
+  working_directory: ~/BaiduExporter
+  docker:
+    - image: circleci/node:6-browsers
+
 jobs:
-  build:
-    docker:
-      - image: circleci/node:6-browsers
-
-    working_directory: ~/BaiduExporter
-
-    branches:
-      only:
-        - master
-
+  install:
+    <<: *defaults
     steps:
       - run: sudo apt update
       # add xxd dependency
@@ -24,12 +22,20 @@ jobs:
           key: node-chache-{{ .Branch }}-{{ checksum "chrome/package-lock.json" }}
           paths:
             - chrome/node_modules/
+
+  build:
+    <<: *defaults
+    branches:
+      only:
+        - master
+    steps:
+      - attach_workspace:
+          at: ~/BaiduExporter
       - run: npm --prefix chrome/ run build
       - run: echo -e $KEY > /tmp/key.pem
-      - run: .circleci/pack chrome/dist /tmp/key.pem
+      - run: .circleci/pack chrome/dist/ /tmp/key.pem
       - run: rm -rf chrome/release/
       - run: mv chrome/dist/ chrome/release/
-
       - run: |
           git config --global user.email "acgotaku311@gmail.com"
           git config --global user.name "acgotaku311"
@@ -37,3 +43,27 @@ jobs:
           git add chrome/release/
           git commit -m "[ci skip] update chrome.crx and release"
           git push --set-upstream origin master
+
+  test:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: ~/BaiduExporter/chrome
+      - run:
+         name: check PR
+         command: |
+           if [[ -z $CI_PULL_REQUEST ]]; then
+             npm run test
+           fi
+
+workflows:
+  version: 2
+  install_and_test:
+    jobs:
+      - install
+      - build:
+          requires:
+            - install
+      - test:
+          requires:
+            - install
