--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 
 defaults: &defaults
-  working_directory: ~/BaiduExporter
+  working_directory: ~/project/BaiduExporter
   docker:
     - image: circleci/node:6-browsers
 
@@ -23,13 +23,15 @@ jobs:
           paths:
             - chrome/node_modules/
       - persist_to_workspace:
-          root: ~/BaiduExporter
+          root: ~/project
+          paths:
+            - BaiduExporter
 
   build:
     <<: *defaults
     steps:
       - attach_workspace:
-          at: ~/BaiduExporter
+          at: ~/project
       - run: npm --prefix chrome/ run build
       - run: echo -e $KEY > /tmp/key.pem
       - run: .circleci/pack chrome/dist/ /tmp/key.pem
@@ -47,7 +49,7 @@ jobs:
     <<: *defaults
     steps:
       - attach_workspace:
-          at: ~/BaiduExporter
+          at: ~/project
       - run:
          name: check PR
          command: |
