--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
       - run:
          name: check PR
          command: |
-           if [[ -z $CI_PULL_REQUEST ]]; then
+           if [[ ! -z $CI_PULL_REQUEST ]]; then
              npm --prefix chrome/ run test
            fi
 
