--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
           git add BaiduExporter.crx
           git add chrome/release/
           git commit -m "[ci skip] update chrome.crx and release"
-          git push --set-upstream origin master
+          git push
 
   test:
     <<: *defaults
