--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,16 +37,13 @@ jobs:
       - run: .circleci/pack chrome/dist/ /tmp/key.pem
       - run: rm -rf chrome/release/
       - run: mv chrome/dist/ chrome/release/
-      - run:
-          name: Avoid hosts unknown for github
-          command: mkdir ~/.ssh/ && echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
       - run: |
           git config --global user.email "acgotaku311@gmail.com"
           git config --global user.name "acgotaku311"
           git add BaiduExporter.crx
           git add chrome/release/
           git commit -m "[ci skip] update chrome.crx and release"
-          git push
+          git push -u origin master
 
   test:
     <<: *defaults
@@ -56,7 +53,7 @@ jobs:
       - run:
          name: check PR
          command: |
-           if [[ ! -z $CI_PULL_REQUEST ]]; then
+           if [[ ! -z $CIRCLE_PULL_REQUEST ]]; then
              npm --prefix chrome/ run test
            fi
 
