--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,9 @@ jobs:
       - run: .circleci/pack chrome/dist/ /tmp/key.pem
       - run: rm -rf chrome/release/
       - run: mv chrome/dist/ chrome/release/
+      - run:
+          name: Avoid hosts unknown for github
+          command: mkdir ~/.ssh/ && echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
       - run: |
           git config --global user.email "acgotaku311@gmail.com"
           git config --global user.name "acgotaku311"
@@ -51,11 +54,11 @@ jobs:
       - attach_workspace:
           at: ~/project
       - run:
-         name: check PR
-         command: |
-           if [[ ! -z $CIRCLE_PULL_REQUEST ]]; then
-             npm --prefix chrome/ run test
-           fi
+          name: check PR
+          command: |
+            if [[ ! -z $CIRCLE_PULL_REQUEST ]]; then
+              npm --prefix chrome/ run test
+            fi
 
 workflows:
   version: 2
